--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing :border-box
+  box-sizing: border-box
 }
 
 body {
@@ -11,7 +11,8 @@ main {
   margin: 0 auto;
 }
 
-h2, h3 {
+h2,
+h3 {
   margin: 0;
 }
 
@@ -39,8 +40,6 @@ h2, h3 {
   justify-self: center;
 }
 
-
-
 .current-conditions .current {
   align-self: center;
 }
@@ -48,7 +47,7 @@ h2, h3 {
 .day {
   text-align: center;
   min-width: 120px;
-  width: 20%;  
+  width: 20%;
   padding: 10px 0;
   border-right: 1px solid lightgrey;
   border-top: 1px solid lightgrey;
@@ -60,9 +59,9 @@ h2, h3 {
 }
 
 .forecast {
-  display: flex;  
+  display: flex;
   flex-direction: row;
-  flex-wrap: wrap;  
+  flex-wrap: wrap;
 }
 
 .date {
